
* SOLR-16461: `/solr/coreName/replication?command=backup` now has a v2 equivalent, available at
  `/api/cores/coreName/replication/backups` (Sanjay Dutt, Jason Gerlowski, Alex Deparvu)

* SOLR-16938: Auto configure tracer without a <tracerConfig> tag in solr.xml (Alex Deparvu)

* SOLR-16950: SimpleTracer propagation for manual transaction ids

Optimizations
---------------------

* SOLR-16845: BinaryResponseWriter should not attempt cast to Utf8CharSequence (Alex Deparvu via Houston Putman)

* SOLR-16265: reduce memory usage of ContentWriter based requests in Http2SolrClient (Alex Deparvu, Kevin Risden, David Smiley)


Bug Fixes
---------------------

* SOLR-16886: Don't commit multi-part uploads that have been aborted (Tomás Fernández Löbbe, Houston Putman)

* SOLR-16889: Rate Limiter should stop processing on 429 (Alex Deparvu, David Smiley)

* SOLR-16906: Correctly capture REPLICATION metrics in Prometheus config (Daisuke Aritomo via Houston Putman)

* SOLR-16905: Allow access to specified "solr.allowPaths" in Security Manager (daylicron, Houston Putman)

* SOLR-16922: Scripts wrongly prohibit embedded zookeeper when solr port is between 55535 and 64535 (Tiziano Degaetano, Colvin Cowie)

* SOLR-16360: Atomic update on boolean fields doesn't reflect when value starts with "1", "t" or "T" (Rahul Goswami, Justin Sweeney, David Smiley)

* PR#1826: Allow looking up Solr Package repo when that URL references a raw repository.json hosted on Github when the file is JSON but the mimetype used is text/plain. (Eric Pugh)

* SOLR-16944: V2 API /api/node/health should be governed by "health" permission, not "config-read" (janhoy)

* SOLR-16859: Missing Proxy support for Http2SolrClient (Alex Deparvu)

* SOLR-16929: SolrStream propagates undecoded error message (Alex Deparvu)

* SOLR-16934: Allow Solr to read client (javax.net.ssl.*) trustStores and keyStores via SecurityManager. (Houston Putman)
